bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if(c==10){
  ^