bat.bool1.makes10.Makes10.scala.code
def makes10(a:Int, b:Int): Boolean = {
  var c=0
  c=a+b
  if(a==10){
    return true
  }
  if(b==10){
    return true
  }
	if(c==10){
    return true
  }
}